// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@wordpress/components Animate Appear Bottom Left 1`] = `
<div
  className="components-animate__appear is-from-left is-from-bottom components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      bottom left
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Appear Bottom Right 1`] = `
<div
  className="components-animate__appear is-from-right is-from-bottom components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      bottom right
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Appear Top Left 1`] = `
<div
  className="components-animate__appear is-from-left is-from-top components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      top left
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Appear Top Right 1`] = `
<div
  className="components-animate__appear is-from-right is-from-top components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Appear animation. Origin: 
      top right
      .
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Default 1`] = `
<div
  className="components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      No default animation. Use one of type = "appear", "slide-in", or "loading".
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Loading 1`] = `
<div
  className="components-animate__loading components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Loading animation.
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Animate Slide In 1`] = `
<div
  className="components-animate__slide-in is-from-left components-notice is-success is-dismissible"
>
  <div
    className="components-notice__content"
  >
    <p>
      Slide-in animation.
    </p>
  </div>
  <button
    aria-label="Dismiss this notice"
    className="components-button components-icon-button components-notice__dismiss"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-no-alt"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components Button Default 1`] = `
<button
  className="components-button"
  type="button"
>
  Default Button
</button>
`;

exports[`@wordpress/components Button Disabled 1`] = `
<button
  className="components-button"
  disabled={true}
  type="button"
>
  Disabled Button
</button>
`;

exports[`@wordpress/components Button Disabled Link 1`] = `
<button
  className="components-button"
  disabled={true}
  type="button"
>
  Disabled Link Button
</button>
`;

exports[`@wordpress/components Button Large 1`] = `
<button
  className="components-button is-button is-default is-large"
  type="button"
>
  Large Button
</button>
`;

exports[`@wordpress/components Button Large Primary 1`] = `
<button
  className="components-button is-button is-primary is-large"
  type="button"
>
  Large Primary Button
</button>
`;

exports[`@wordpress/components Button Link 1`] = `
<a
  className="components-button"
  href="https://wordpress.org/"
  target="_blank"
>
  Link Button
</a>
`;

exports[`@wordpress/components Button Primary 1`] = `
<button
  className="components-button is-button is-primary"
  type="button"
>
  Primary Button
</button>
`;

exports[`@wordpress/components Button Small 1`] = `
<button
  className="components-button is-button is-default is-small"
  type="button"
>
  Small Button
</button>
`;

exports[`@wordpress/components Button Toggled 1`] = `
<button
  className="components-button is-toggled"
  type="button"
>
  Toggled Button
</button>
`;

exports[`@wordpress/components ButtonGroup Default 1`] = `
<div
  className="components-button-group"
  role="group"
>
  <button
    className="components-button is-button is-primary"
    style={
      Object {
        "margin": "0 4px",
      }
    }
    type="button"
  >
    Button 1
  </button>
  <button
    className="components-button is-button is-primary"
    style={
      Object {
        "margin": "0 4px",
      }
    }
    type="button"
  >
    Button 2
  </button>
</div>
`;

exports[`@wordpress/components CheckboxControl All 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="inspector-checkbox-control-1"
    >
      User
    </label>
    <span
      className="components-checkbox-control__input-container"
    >
      <input
        aria-describedby="inspector-checkbox-control-1__help"
        checked={true}
        className="components-checkbox-control__input"
        id="inspector-checkbox-control-1"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <svg
        aria-hidden="true"
        className="dashicon dashicons-yes components-checkbox-control__checked"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.83 4.89l1.34.94-5.81 8.38H9.02L5.78 9.67l1.34-1.25 2.57 2.4z"
        />
      </svg>
    </span>
    <label
      className="components-checkbox-control__label"
      htmlFor="inspector-checkbox-control-1"
    >
      Is author
    </label>
  </div>
  <p
    className="components-base-control__help"
    id="inspector-checkbox-control-1__help"
  >
    Is the user an author or not?
  </p>
</div>
`;

exports[`@wordpress/components CheckboxControl Default 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <span
      className="components-checkbox-control__input-container"
    >
      <input
        checked={true}
        className="components-checkbox-control__input"
        id="inspector-checkbox-control-0"
        onChange={[Function]}
        type="checkbox"
        value="1"
      />
      <svg
        aria-hidden="true"
        className="dashicon dashicons-yes components-checkbox-control__checked"
        focusable="false"
        height={20}
        role="img"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.83 4.89l1.34.94-5.81 8.38H9.02L5.78 9.67l1.34-1.25 2.57 2.4z"
        />
      </svg>
    </span>
    <label
      className="components-checkbox-control__label"
      htmlFor="inspector-checkbox-control-0"
    >
      Is author
    </label>
  </div>
</div>
`;

exports[`@wordpress/components ColorIndicator Default 1`] = `
<span
  className="component-color-indicator"
  style={
    Object {
      "background": "#0073aa",
    }
  }
/>
`;

exports[`@wordpress/components Dashicon Default 1`] = `
<svg
  aria-hidden="true"
  className="dashicon dashicons-wordpress"
  color="#0079AA"
  focusable="false"
  height={20}
  role="img"
  viewBox="0 0 20 20"
  width={20}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20 10c0-5.52-4.48-10-10-10S0 4.48 0 10s4.48 10 10 10 10-4.48 10-10zM10 1.01c4.97 0 8.99 4.02 8.99 8.99s-4.02 8.99-8.99 8.99S1.01 14.97 1.01 10 5.03 1.01 10 1.01zM8.01 14.82L4.96 6.61c.49-.03 1.05-.08 1.05-.08.43-.05.38-1.01-.06-.99 0 0-1.29.1-2.13.1-.15 0-.33 0-.52-.01 1.44-2.17 3.9-3.6 6.7-3.6 2.09 0 3.99.79 5.41 2.09-.6-.08-1.45.35-1.45 1.42 0 .66.38 1.22.79 1.88.31.54.5 1.22.5 2.21 0 1.34-1.27 4.48-1.27 4.48l-2.71-7.5c.48-.03.75-.16.75-.16.43-.05.38-1.1-.05-1.08 0 0-1.3.11-2.14.11-.78 0-2.11-.11-2.11-.11-.43-.02-.48 1.06-.05 1.08l.84.08 1.12 3.04zm6.02 2.15L16.64 10s.67-1.69.39-3.81c.63 1.14.94 2.42.94 3.81 0 2.96-1.56 5.58-3.94 6.97zM2.68 6.77L6.5 17.25c-2.67-1.3-4.47-4.08-4.47-7.25 0-1.16.2-2.23.65-3.23zm7.45 4.53l2.29 6.25c-.75.27-1.57.42-2.42.42-.72 0-1.41-.11-2.06-.3z"
  />
</svg>
`;

exports[`@wordpress/components Icon Colors 1`] = `
Array [
  <div
    style={
      Object {
        "color": "blue",
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      24
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "color": "purple",
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      24
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "color": "green",
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      24
      px
    </div>
  </div>,
]
`;

exports[`@wordpress/components Icon Default 1`] = `
<div>
  <svg
    aria-hidden="true"
    className="dashicon dashicons-screenoptions"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 20 20"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
    />
  </svg>
  <div
    style={
      Object {
        "fontSize": 12,
      }
    }
  >
    24
    px
  </div>
</div>
`;

exports[`@wordpress/components Icon Sizes 1`] = `
Array [
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={14}
      role="img"
      viewBox="0 0 20 20"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      14
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={16}
      role="img"
      viewBox="0 0 20 20"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      16
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      20
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={24}
      role="img"
      viewBox="0 0 20 20"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      24
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={28}
      role="img"
      viewBox="0 0 20 20"
      width={28}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      28
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={32}
      role="img"
      viewBox="0 0 20 20"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      32
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={40}
      role="img"
      viewBox="0 0 20 20"
      width={40}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      40
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={48}
      role="img"
      viewBox="0 0 20 20"
      width={48}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      48
      px
    </div>
  </div>,
  <div
    style={
      Object {
        "display": "inline-block",
        "padding": 20,
      }
    }
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-screenoptions"
      focusable="false"
      height={56}
      role="img"
      viewBox="0 0 20 20"
      width={56}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 9V3H3v6h6zm8 0V3h-6v6h6zm-8 8v-6H3v6h6zm8 0v-6h-6v6h6z"
      />
    </svg>
    <div
      style={
        Object {
          "fontSize": 12,
        }
      }
    >
      56
      px
    </div>
  </div>,
]
`;

exports[`@wordpress/components Icon With A Component 1`] = `
<svg
  aria-hidden="true"
  focusable="false"
  role="img"
>
  <path
    d="M5 4v3h5.5v12h3V7H19V4z"
  />
</svg>
`;

exports[`@wordpress/components Icon With A Function 1`] = `
<svg
  aria-hidden="true"
  focusable="false"
  role="img"
>
  <path
    d="M5 4v3h5.5v12h3V7H19V4z"
  />
</svg>
`;

exports[`@wordpress/components Icon With An SVG 1`] = `
<svg
  aria-hidden="true"
  focusable="false"
  height={24}
  role="img"
  width={24}
>
  <path
    d="M5 4v3h5.5v12h3V7H19V4z"
  />
</svg>
`;

exports[`@wordpress/components IconButton Default 1`] = `
<button
  aria-label="More"
  className="components-button components-icon-button"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="dashicon dashicons-ellipsis"
    focusable="false"
    height={20}
    role="img"
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 10c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm12-2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
</button>
`;

exports[`@wordpress/components IconButton Grouped 1`] = `
<div
  style={
    Object {
      "display": "inline-flex",
    }
  }
>
  <button
    aria-label="Bold"
    className="components-button components-icon-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-editor-bold"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 4v13h4.54c1.37 0 2.46-.33 3.26-1 .8-.66 1.2-1.58 1.2-2.77 0-.84-.17-1.51-.51-2.01s-.9-.85-1.67-1.03v-.09c.57-.1 1.02-.4 1.36-.9s.51-1.13.51-1.91c0-1.14-.39-1.98-1.17-2.5C12.75 4.26 11.5 4 9.78 4H6zm2.57 5.15V6.26h1.36c.73 0 1.27.11 1.61.32.34.22.51.58.51 1.07 0 .54-.16.92-.47 1.15s-.82.35-1.51.35h-1.5zm0 2.19h1.6c1.44 0 2.16.53 2.16 1.61 0 .6-.17 1.05-.51 1.34s-.86.43-1.57.43H8.57v-3.38z"
      />
    </svg>
  </button>
  <button
    aria-label="Italic"
    className="components-button components-icon-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-editor-italic"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.78 6h-2.13l-2.8 9h2.12l-.62 2H4.6l.62-2h2.14l2.8-9H8.03l.62-2h6.75z"
      />
    </svg>
  </button>
  <button
    aria-label="Underline"
    className="components-button components-icon-button"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="dashicon dashicons-editor-underline"
      focusable="false"
      height={20}
      role="img"
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 5h-2v5.71c0 1.99-1.12 2.98-2.45 2.98-1.32 0-2.55-1-2.55-2.96V5H5v5.87c0 1.91 1 4.54 4.48 4.54 3.49 0 4.52-2.58 4.52-4.5V5zm0 13v-2H5v2h9z"
      />
    </svg>
  </button>
</div>
`;

exports[`@wordpress/components ScrollLock Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#fff",
      "backgroundImage": "linear-gradient(transparent 50%, rgba(0, 0, 0, 0.05) 50%)",
      "backgroundSize": "50px 50px",
      "height": 3000,
      "position": "relative",
    }
  }
>
  <div>
    Start scrolling down...
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "center",
        "padding": 40,
        "position": "sticky",
        "textAlign": "center",
        "top": 0,
      }
    }
  >
    <div>
      <button
        className="components-button is-button is-default"
        onClick={[Function]}
        type="button"
      >
        Toggle Scroll Lock
      </button>
      <p>
        Scroll locked: 
        <strong>
          No
        </strong>
      </p>
    </div>
  </div>
</div>
`;
